fixed the ui  added host header still vhost and dns needs testing still issue with loading huge files